--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,11 @@ jobs:
       # ③ 安装依赖
       - name: Install build dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
+            sudo apt-get update
+            sudo apt-get install -y \
             ack antlr3 asciidoc bash bc binutils bzip2 cmake coreutils diffstat \
-            file findutils flex gawk gcc-multilib g++-multilib gettext git libncurses5-dev \
-            libssl-dev make patch perl-modules python3 python3-distutils python3-setuptools \
+            file findutils flex gawk gcc-multilib g++-multilib gettext git \
+            libncurses5-dev libssl-dev make patch perl-modules python3 python3-setuptools \
             rsync unzip wget zlib1g-dev swig
 
       # ④ 更新 feed（进入 openwrt 目录）
