--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,15 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # ① 检出当前仓库（带 config）
+      # 检出当前仓库（带 config）
       - name: Checkout self repository
         uses: actions/checkout@v4
 
-      # ② 拉取 OpenWrt 源码
+      # 拉取 OpenWrt 源码
       - name: Clone OpenWRT source
         run: git clone --depth=1 https://github.com/openwrt/openwrt.git
 
-      # ③ 安装依赖
+      # 安装依赖
       - name: Install build dependencies
         run: |
             sudo apt-get update
@@ -27,7 +27,18 @@ jobs:
             libncurses5-dev libssl-dev make patch perl-modules python3 python3-setuptools \
             rsync unzip wget zlib1g-dev swig
 
-      # ④ 更新 feed（进入 openwrt 目录）
+        # 清理磁盘
+      - name: Free up disk space
+        run: |
+            sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+            sudo apt-get clean
+
+      - name: Apply patch
+        working-directory: ./openwrt
+        run: |
+            bash ../patch_openwrt.sh "COpenWrt"
+
+      # 更新 feed（进入 openwrt 目录）
       - name: Update feeds & install
         working-directory: ./openwrt
         run: |
@@ -36,13 +47,13 @@ jobs:
 
 
 
-      # ⑤ 复制 config
+      # 复制 config
       - name: Copy custom .config
         working-directory: ./openwrt
         run: |
           cp ../default.config .config
 
-      # ⑥ 编译（同样要进入 openwrt 目录）
+      # 编译（同样要进入 openwrt 目录）
       - name: Compile
         run: |
           cd openwrt
@@ -50,7 +61,7 @@ jobs:
           make download -j"$(nproc)" || make download -j1 V=s
           make -j"$(nproc)" || make -j1 V=s
 
-      # ⑦ 上传产物（要包含 openwrt 路径）
+      # 上传产物（要包含 openwrt 路径）
       - name: Archive output
         uses: actions/upload-artifact@v4
         with:
