--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,14 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
+      - name: Install themes & tools
+        working-directory: ./openwrt
+        run: |
+            set -euo pipefail
+            git clone --depth 1 https://github.com/jerrykuku/luci-theme-argon.git
+            rm -rf package/feeds/luci/luci-theme-argon
+            mv luci-theme-argon package/feeds/luci/luci-theme-argon
+
 
 
       # 复制 config
