--- a/default.config
+++ b/default.config
@@ -4,7 +4,8 @@ CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=512
 
-# ---- LuCI & 主题 ----
+# ---- LuCI & 主题 设置中文 ----
+CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
@@ -15,6 +16,9 @@ CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-filemanager-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 
 # ---- 网络功能 ----
 CONFIG_PACKAGE_dnsmasq-full=y
