--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,9 @@ jobs:
             rm -rf package/feeds/luci/luci-theme-argon
             mv luci-theme-argon package/feeds/luci/luci-theme-argon
 
-
+      - name: Install luci-app-openclash (Bypass only)
+        working-directory: ./openwrt
+        run: bash ../openclash.sh
 
       # 复制 config
       - name: Copy custom .config
