--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,11 @@ jobs:
         uses: actions/checkout@v4
 
       # 拉取 OpenWrt 源码
-      - name: Clone OpenWRT source
-        run: git clone --depth=1 https://github.com/openwrt/openwrt.git
+      - name: Clone OpenWrt source (v24.10.4)
+        run: |
+          git clone https://github.com/openwrt/openwrt.git
+          cd openwrt
+          git checkout v24.10.4
 
       # 安装依赖
       - name: Install build dependencies
