--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,9 @@ jobs:
       - name: Checkout self repository
         uses: actions/checkout@v4
 
-      # 拉取 OpenWrt 源码
       - name: Clone OpenWrt source (v24.10.4)
         run: |
-          git clone https://github.com/openwrt/openwrt.git
-          cd openwrt
-          git checkout v24.10.4
+          git clone --branch v24.10.4 --depth=1 https://github.com/openwrt/openwrt.git
 
       # 安装依赖
       - name: Install build dependencies
@@ -56,9 +53,15 @@ jobs:
             rm -rf package/feeds/luci/luci-theme-argon
             mv luci-theme-argon package/feeds/luci/luci-theme-argon
 
-      - name: Install luci-app-openclash (Bypass only)
-        working-directory: ./openwrt
-        run: bash ../openclash.sh
+      # - name: Patch Rust config to avoid CI panic
+      #   run: |
+      #     find openwrt/feeds/packages/lang/rust -type f -name "config.toml" -exec \
+      #       sed -i 's/download-ci-llvm *= *true/download-ci-llvm = "if-unchanged"/' {} +
+        
+
+      # - name: Install luci-app-openclash (Bypass only)
+      #   working-directory: ./openwrt
+      #   run: bash ../openclash.sh
 
       # 复制 config
       - name: Copy custom .config
