--- a/default.config
+++ b/default.config
@@ -36,7 +36,7 @@ CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 # CONFIG_PACKAGE_dnsmasq_full_noid=y
 # CONFIG_PACKAGE_dnsmasq_full_tftp=y
-CONFIG_PACKAGE_luci-mod-network=y
+# CONFIG_PACKAGE_luci-mod-network=y
 
 # ---- Docker 支持 ----
 CONFIG_PACKAGE_dockerd=y
