--- a/default.config
+++ b/default.config
@@ -21,6 +21,7 @@ CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 
 # ---- 网络功能 ----
+CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-wol=y
@@ -28,7 +29,7 @@ CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
 
 # ---- 网络服务 (DNS/DHCP 完整支持) ----
-CONFIG_PACKAGE_dnsmasq-full=y
+# CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq_full_auth=y
 # CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 # CONFIG_PACKAGE_dnsmasq_full_dhcp=y
